--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5676,11 +5676,23 @@ block-editor.extension.ai.confirmation.header=Discard Changes?
 block-editor.extension.ai.confirmation.message=It looks like you've made significant or complex edits. Are you sure you want to discard these changes? Any unsaved progress will be lost.
 
 locales.add.locale=Add Locale
+locales.edit.locale=Edit Locale
 locales.locale=Locale
 locales.language=Language
 locales.country=Country
 locales.variables=Variables
+locales.edit.locale=Edit Locale
+locales.add.locale=Add Locale
 locales.menu=Menu
+locales.edit=Edit
+locales.delete=Delete
+locales.make.default=Make Default
+locales.language.input.placeholder=Select form list or type
+locales.language.hint=Select the language you want to add from the ISO language list.
+locales.country.hint=If you wish to add a specific location for the language select from the list.
+
+
+locales.
 
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
