--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -652,7 +652,7 @@
                          files and hence the coverage report.
                         -->
                         <argLine>@{argLine} -Xmx1024m
-                            --illegal-access=warn
+                            --illegal-access=deny
                             --add-modules java.se
                             --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                             --add-opens java.base/java.lang=ALL-UNNAMED
@@ -662,6 +662,24 @@
                             --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                            --add-opens java.base/java.lang.ref=ALL-UNNAMED
+                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                            --add-opens java.base/java.nio=ALL-UNNAMED
+                            --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                            --add-opens java.base/java.time=ALL-UNNAMED
+                            --add-opens java.base/java.time.zone=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                            --add-opens java.base/java.util.regex=ALL-UNNAMED
+                            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
+                            --add-opens java.management/javax.management=ALL-UNNAMED
+                            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+                            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+                            --add-opens java.base/sun.net.dns=ALL-UNNAMED
                         </argLine>
 
                         <trimStackTrace>false</trimStackTrace>
@@ -812,15 +830,35 @@
                         <forkCount>${surefire.fork.count}</forkCount>
                         <reuseForks>true</reuseForks>
                         <argLine>@{argLine} -Xmx1024m
-                            --illegal-access=warn
+                            --illegal-access=deny
                             --add-modules java.se
                             --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.nio=ALL-UNNAMED
                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                             --add-opens java.management/sun.management=ALL-UNNAMED
+                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                            --add-opens java.base/java.lang.ref=ALL-UNNAMED
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                            --add-opens java.base/java.nio=ALL-UNNAMED
+                            --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                            --add-opens java.base/java.time=ALL-UNNAMED
+                            --add-opens java.base/java.time.zone=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                            --add-opens java.base/java.util.regex=ALL-UNNAMED
+                            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
+                            --add-opens java.management/javax.management=ALL-UNNAMED
+                            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+                            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+                            --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+
                         <systemPropertyVariables/>
                         <trimStackTrace>true</trimStackTrace>
                     </configuration>
