--- a/.github/workflows/reusable-ci-build.yml
+++ b/.github/workflows/reusable-ci-build.yml
@@ -11,14 +11,14 @@ env:
   REGISTRY: ghcr.io
   DOCKER_IMAGE: dotcms/dotcms_test
   DOCKER_TAG: run-${{ github.run_id }}
-
+  JAVA_VERSION: 21
 jobs:
   #
   # Initial JDK 11 Build
   # Basic build and install all with maven without running tests.
   # Provides local maven repo for subsequent steps
   #
-  build-jdk11:
+  build-jdk:
     name: "Initial Artifact Build"
     runs-on: ubuntu-20.04
     if: inputs.core-build == true
@@ -35,10 +35,10 @@ jobs:
         if: github.ref != 'refs/heads/master'
         run: git fetch origin master:master
       - uses: ./.github/actions/cleanup-runner
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '21'
           distribution: 'temurin'
       - name: Get Date
         id: get-date
