--- a/core-web/tsconfig.base.json
+++ b/core-web/tsconfig.base.json
@@ -19,6 +19,7 @@
         "paths": {
             "@components/*": ["apps/dotcms-ui/src/app/view/components/*"],
             "@directives/*": ["apps/dotcms-ui/src/app/view/directives/*"],
+            "@dotcms/angular": ["libs/sdk/angular/src/index.ts"],
             "@dotcms/app/*": ["apps/dotcms-ui/src/app/*"],
             "@dotcms/block-editor": ["libs/block-editor/src/public-api.ts"],
             "@dotcms/client": ["libs/sdk/client/src/index.ts"],
