--- a/core-web/package.json
+++ b/core-web/package.json
@@ -205,6 +205,7 @@
         "@types/webpack": "4.41.21",
         "@typescript-eslint/eslint-plugin": "6.21.0",
         "@typescript-eslint/parser": "6.21.0",
+        "autoprefixer": "^10.4.0",
         "babel-jest": "^28.1.1",
         "babel-loader": "^8.2.1",
         "codelyzer": "^6.0.2",
