#28263 Applying feedback and updating slack id

--- a/.github/data/slack-mappings.json
+++ b/.github/data/slack-mappings.json
@@ -98,7 +98,7 @@
   },
   {
     "github_user": "jgambarios",
-    "slack_id": "D04SH7PU16Z"
+    "slack_id": "U028X13T2"
   },
   {
     "github_user": "fishsmith",
