--- a/.github/workflows/reusable-ci-test.yml
+++ b/.github/workflows/reusable-ci-test.yml
@@ -318,6 +318,11 @@ jobs:
       - id: fetch-core
         name: Fetch Core Repo
         uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'temurin'
       - name: Download Maven Repo
         uses: actions/download-artifact@v4
         with:
