WIP - Solved resolver issue

--- a/core-web/libs/sdk/angular/tsconfig.lib.prod.json
+++ b/core-web/libs/sdk/angular/tsconfig.lib.prod.json
@@ -1,10 +1,7 @@
 {
     "extends": "./tsconfig.lib.json",
     "compilerOptions": {
-        "declarationMap": true,// changed from false
-        // "paths": {
-        //     "@angular/*": ["../node_modules/@angular/*"]
-        // }
+        "declarationMap": true // changed from false
     },
     "angularCompilerOptions": {
         "compilationMode": "partial"
