--- a/core-web/libs/sdk/angular/tsconfig.json
+++ b/core-web/libs/sdk/angular/tsconfig.json
@@ -7,7 +7,7 @@
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
+        "noFallthroughCasesInSwitch": true
         // "paths": {
         //     "@angular/*": ["../node_modules/@angular/*"]
         // }
