--- a/examples/angular/tsconfig.app.json
+++ b/examples/angular/tsconfig.app.json
@@ -5,7 +5,9 @@
     "outDir": "./out-tsc/app",
     "types": [],
     "paths": {
-      "@angular/*": [ "../node_modules/@angular/*" ]
+      //This acts like npm link. 
+      // When app try to search in this package, it will look in the core-web/dist/libs/sdk/angular
+      "@dotcms/angular": [ "../../core-web/dist/libs/sdk/angular" ]
     }
   },
   "files": [
