--- a/examples/angular/tsconfig.json
+++ b/examples/angular/tsconfig.json
@@ -23,9 +23,9 @@
       "ES2022",
       "dom"
     ],
-    "paths": {
-      "@angular/*": [ "../node_modules/@angular/*" ]
-    }
+    // "paths": {
+    //   "@angular/*": [ "./node_modules/@angular/*" ]
+    // }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
