implementation (add language): progress

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5684,7 +5684,8 @@ locales.variables=Variables
 locales.edit.locale=Edit Locale
 locales.add.locale=Add Locale
 locales.menu=Menu
-locales.edit=Edit
+locales.edit=Edit Locale
+locales.push.publish=Push Publish
 locales.delete=Delete
 locales.make.default=Make Default
 locales.language.input.placeholder=Select form list or type
