--- a/core-web/libs/sdk/angular/tsconfig.lib.prod.json
+++ b/core-web/libs/sdk/angular/tsconfig.lib.prod.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.lib.json",
     "compilerOptions": {
-        "declarationMap": true // changed from false
+        "declarationMap": true
     },
     "angularCompilerOptions": {
         "compilationMode": "partial"
