implementation (language actions): tests

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5687,7 +5687,7 @@ locales.menu=Menu
 locales.edit=Edit Locale
 locales.push.publish=Push Publish
 locales.delete=Delete
-locales.make.default=Make Default
+locales.set.as.default=Set As Default
 locales.language.input.placeholder=Select form list or type
 locales.language.hint=Select the language you want to add from the ISO language list.
 locales.country.hint=If you wish to add a specific location for the language select from the list.
