--- a/core-web/tsconfig.base.json
+++ b/core-web/tsconfig.base.json
@@ -35,6 +35,9 @@
             "@dotcms/dotcms-webcomponents/loader": ["dist/libs/dotcms-webcomponents/loader"],
             "@dotcms/edit-content": ["libs/edit-content/src/index.ts"],
             "@dotcms/experiments": ["libs/sdk/experiments/src/index.ts"],
+            "@dotcms/lucene-syntax": [
+                "libs/sdk/client/src/lib/query-builder/lucene-syntax/index.ts"
+            ],
             "@dotcms/portlets/dot-ema": ["libs/portlets/edit-ema/portlet/src/index.ts"],
             "@dotcms/portlets/dot-ema/ui": ["libs/portlets/edit-ema/ui/src/index.ts"],
             "@dotcms/portlets/dot-experiments/data-access": [
@@ -49,6 +52,7 @@
             "@dotcms/portlets/dot-locales/portlet/data-access": [
                 "libs/portlets/dot-locales/data-access/src/index.ts"
             ],
+            "@dotcms/query-builder": ["libs/sdk/client/src/lib/query-builder/sd-query-builder.ts"],
             "@dotcms/react": ["libs/sdk/react/src/index.ts"],
             "@dotcms/react/mocks": ["libs/sdk/react/src/lib/mocks/index.ts"],
             "@dotcms/template-builder": ["libs/template-builder/src/index.ts"],
