implementation (Languages): #28476 Support the different Menu actions in the table.  (#28669)
### Proposed Changes
* add the menu options to the locale table and the confirmation
messages.
* Push Publish 
* Set As Default 
* Delete 


### Screenshots


https://github.com/dotCMS/core/assets/31667212/646d62f0-b6d3-4f8d-b9e4-173e955160b8

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5676,11 +5676,31 @@ block-editor.extension.ai.confirmation.header=Discard Changes?
 block-editor.extension.ai.confirmation.message=It looks like you've made significant or complex edits. Are you sure you want to discard these changes? Any unsaved progress will be lost.
 
 locales.add.locale=Add Locale
+locales.edit.locale=Edit Locale
 locales.locale=Locale
 locales.language=Language
 locales.country=Country
 locales.variables=Variables
+locales.edit.locale=Edit Locale
+locales.add.locale=Add Locale
 locales.menu=Menu
+locales.edit=Edit Locale
+locales.push.publish=Push Publish
+locales.delete=Delete
+locales.set.as.default=Set As Default
+locales.language.input.placeholder=Select form list or type
+locales.language.hint=Select the language you want to add from the ISO language list.
+locales.country.hint=If you wish to add a specific location for the language select from the list.
+locale.set.default.confirmation.title=Are you sure you want to set ${0} as the default?
+locale.set.default.confirmation.message=Setting this language as the default will alter the language of all site content and communications.<br><br>Be mindful of any unintended consequences.
+locale.set.default.confirmation.accept.button=Set as Default
+locale.delete.confirmation.title=Are you sure you want to delete {0} locale?
+locale.delete.confirmation.message=<b>Attention:</b> This action will permanently remove the selected locale and all associated content items from your site.<br><br>Please review your decision carefully before proceeding.
+locale.delete.confirmation.notification.title=Locale Deletion In Progress
+locale.delete.confirmation.notification.message=Removal process running, it may take some time.
+locale.action.confirmation.text=Type <b>{0}</b> to confirm
+locale.notification.success.title=Changes Saved
+locale.notification.success.message=Your changes have been saved.
 
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
