feat(edit-content) add category field #28658

--- a/core-web/libs/edit-content/project.json
+++ b/core-web/libs/edit-content/project.json
@@ -17,5 +17,5 @@
             "outputs": ["{options.outputFile}"]
         }
     },
-    "tags": []
+    "tags": ["type:feature", "scope:dotcms-ui", "portlet:edit-content"]
 }
