--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5724,3 +5724,7 @@ edit.content.layout.beta.message.switch=switch back
 edit.content.layout.beta.message.needed=if needed.
 edit.content.layout.no.content.to.show = No content to show.
 content.type.form.banner.message= Enable <b>Edit Content Beta</b> for a fresh editing experience (roll back anytime).
+
+edit.content.category-field.show-categories-dialog=Select
+edit.content.category-field.cancel=Cancel
+edit.content.category-field.apply=Apply
