--- a/independent-projects/core-plugins/tika-plugin/pom.xml
+++ b/independent-projects/core-plugins/tika-plugin/pom.xml
@@ -9,22 +9,19 @@
     <artifactId>com.dotcms.tika</artifactId>
     <packaging>bundle</packaging>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.bundle.version>5.1.8</maven.bundle.version>
         <osgi.core.version>8.0.0</osgi.core.version>
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <tika.version>2.8.0</tika.version>
         <skip.rewrite>true</skip.rewrite>
-        <tika.api.version>${project.version}</tika.api.version>
     </properties>
     <dependencies>
 
         <dependency>
             <groupId>com.dotcms.core.plugins</groupId>
             <artifactId>com.dotcms.tika-api</artifactId>
-            <version>${tika.api.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
