--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -15,6 +15,43 @@
         <sha1/>
         <flatten.mode>oss</flatten.mode>
         <flatten.skip>false</flatten.skip>
+
+        <java.version>11</java.version>
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
+        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
+        <java.module.args>
+            --illegal-access=deny
+            --add-modules java.se
+            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.management/sun.management=ALL-UNNAMED
+            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+            --add-opens java.base/java.lang.ref=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens java.base/java.net=ALL-UNNAMED
+            --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/java.nio.charset=ALL-UNNAMED
+            --add-opens java.base/java.time=ALL-UNNAMED
+            --add-opens java.base/java.time.zone=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+            --add-opens java.base/java.util.regex=ALL-UNNAMED
+            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
+            --add-opens java.management/javax.management=ALL-UNNAMED
+            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+        </java.module.args>
+
         <maven.deploy.skip>false</maven.deploy.skip>
         <tomcat.version>9.0.85</tomcat.version>
         <!-- Add any properties here that are to have defaults and overrides set in the environment properties -->
@@ -45,7 +82,7 @@
         <insecure.repositories>WARN</insecure.repositories>
         <!-- jandex maven plugin version -->
         <jandex-maven-plugin.version>1.2.3</jandex-maven-plugin.version>
-        <java.version>11</java.version>
+
         <javadoc.additional.params>-Xdoclint:none --allow-script-in-comments</javadoc.additional.params>
         <jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>
         <maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
@@ -53,11 +90,7 @@
         <maven.compiler.argument.testSource>${maven.compiler.testSource}</maven.compiler.argument.testSource>
         <maven.compiler.argument.testTarget>${maven.compiler.testTarget}</maven.compiler.argument.testTarget>
         <maven.compiler.parameters>true</maven.compiler.parameters>
-        <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
-        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
+
         <maven.min.version>3.8.1</maven.min.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -130,7 +163,7 @@
         <skipTests>false</skipTests>
         <skip.surefire.tests>${skipTests}</skip.surefire.tests>
         <surefire.fork.count>1</surefire.fork.count>
-        <immutables.version>2.9.0</immutables.version>
+        <immutables.version>2.10.1</immutables.version>
         <docker.platforms/>
         <docker.output.image.name>dotcms/dotcms-test</docker.output.image.name>
         <docker.version.tag>${project.version}</docker.version.tag>
@@ -652,33 +685,7 @@
                          files and hence the coverage report.
                         -->
                         <argLine>@{argLine} -Xmx1024m
-                            --illegal-access=deny
-                            --add-modules java.se
-                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                            --add-opens java.management/sun.management=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
-                            --add-opens java.base/java.util=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
-                            --add-opens java.base/java.lang.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                            --add-opens java.base/java.net=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/java.nio.charset=ALL-UNNAMED
-                            --add-opens java.base/java.time=ALL-UNNAMED
-                            --add-opens java.base/java.time.zone=ALL-UNNAMED
-                            --add-opens java.base/java.util=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
-                            --add-opens java.base/java.util.regex=ALL-UNNAMED
-                            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
-                            --add-opens java.management/javax.management=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
-                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
-                            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+                            ${java.module.args}
                         </argLine>
 
                         <trimStackTrace>false</trimStackTrace>
@@ -830,32 +837,7 @@
                         <reuseForks>true</reuseForks>
                         <argLine>@{argLine} -Xmx1024m
                             --illegal-access=deny
-                            --add-modules java.se
-                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                            --add-opens java.management/sun.management=ALL-UNNAMED
-                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
-                            --add-opens java.base/java.util=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                            --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
-                            --add-opens java.base/java.lang.ref=ALL-UNNAMED
-                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                            --add-opens java.base/java.net=ALL-UNNAMED
-                            --add-opens java.base/java.nio=ALL-UNNAMED
-                            --add-opens java.base/java.nio.charset=ALL-UNNAMED
-                            --add-opens java.base/java.time=ALL-UNNAMED
-                            --add-opens java.base/java.time.zone=ALL-UNNAMED
-                            --add-opens java.base/java.util=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
-                            --add-opens java.base/java.util.regex=ALL-UNNAMED
-                            --add-opens java.base/javax.crypto.spec=ALL-UNNAMED
-                            --add-opens java.management/javax.management=ALL-UNNAMED
-                            --add-opens java.base/sun.nio.cs=ALL-UNNAMED
-                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
-                            --add-opens java.base/sun.util.locale=ALL-UNNAMED
+                            ${java.module.args}
                         </argLine>
 
                         <systemPropertyVariables/>
