--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5713,6 +5713,7 @@ locale.id.standard.hint=Locale is determined by the Language used, or generated 
 locale.id.hint=Locales should generally be concise. Many sites use ISO codes, such as 'en' for English or 'es-cr' for Español in Costa Rica.
 locale.language.id=Language Id
 locale.custom.waring=The ability to add Custom Locales may become deprecated in the near future.
+locale.error.message=Locale id already exists.
 
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
