Issue 28596 use add-opens and set --illegal-access=deny in preparation for Java 21 (#28619)
### Proposed Changes

- Fix tika api versioning and tie it to build/release
- Add required add-opens parameters to work around illegal access issues
and set set —illegal-access=deny to replicate J21 behavior
- Make ContentTypeUtilsTest succeed regardless of the parameter order
returned which is JVM dependent.
- Add junit-jupiter-suite and junit-platform-suite dependencies to
prepare for Junit4 → Junit 5 migration of Current Suite classes and
DataProvider test cases
- Normalize some duplicate definitions of Java version to reduce changes
when a change is made.
- Upgrade dnsjava to 3.5.3 that supports java 21 without extra
add-opens.

Tests: Should focus on any issues with bundles due to the serialization
and deserialization and errors in logs indicating there is illegal
access to internal classes. Serialization during caching would also be a
concern area and reporting of cache sizes.



### Checklist
- [ ] Tests
- [ ] Translations
- [ ] Security Implications Contemplated (add notes if applicable)

### Additional Info
** any additional useful context or info **

### Screenshots
Original             |  Updated
:-------------------------:|:-------------------------:
** original screenshot **  |  ** updated screenshot **

--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -26,7 +26,6 @@
         <jackson.version>2.16.1</jackson.version>
         <jersey.version>2.22.1</jersey.version>
         <graalvm.version>22.3.3</graalvm.version>
-        <dotcms.tika-api.version>2023.09.8</dotcms.tika-api.version>
     </properties>
     <dependencyManagement>
 
@@ -59,7 +58,7 @@
             <dependency>
                 <groupId>com.dotcms.core.plugins</groupId>
                 <artifactId>com.dotcms.tika-api</artifactId>
-                <version>${dotcms.tika-api.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -799,7 +798,7 @@
            <dependency>
                 <groupId>dnsjava</groupId>
                 <artifactId>dnsjava</artifactId>
-                <version>2.1.8</version>
+                <version>3.5.3</version>
             </dependency>
 
             <dependency>
@@ -1505,7 +1504,12 @@
                 <artifactId>mockito-core</artifactId>
                 <version>5.11.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>5.11.0</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <!-- Hamcrest is a framework for writing matcher objects allowing 'match' rules to be defined declaratively. -->
                 <groupId>org.hamcrest</groupId>
