--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5692,7 +5692,7 @@ locales.set.as.default=Set As Default
 locales.language.input.placeholder=Select from list
 locales.language.hint=Select a Locale Language from the list of Languages & 2-letter ISO Codes.
 locales.country.hint=Select a Locale Country from the list of Countries & 2-letter ISO Codes.
-locale.set.default.confirmation.title=Are you sure you want to set ${0} as the default?
+locale.set.default.confirmation.title=Are you sure you want to set {0} as the default?
 locale.set.default.confirmation.message=Setting this language as the default will alter the language of all site content and communications.<br><br>Be mindful of any unintended consequences.
 locale.set.default.confirmation.accept.button=Set as Default
 locale.delete.confirmation.title=Are you sure you want to delete {0} locale?
@@ -5713,7 +5713,7 @@ locale.id.standard.hint=Locale is determined by the Language used, or generated 
 locale.id.hint=Locales should generally be concise. Many sites use ISO codes, such as 'en' for English or 'es-cr' for Español in Costa Rica.
 locale.language.id=Language Id
 locale.custom.waring=The ability to add Custom Locales may become deprecated in the near future.
-locale.error.message=Locale id already exists.
+locale.error.message=Locale ID already exists.
 
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
