--- a/core-web/libs/sdk/angular/package.json
+++ b/core-web/libs/sdk/angular/package.json
@@ -5,7 +5,8 @@
         "@angular/common": "^17.1.0",
         "@angular/core": "^17.1.0",
         "@angular/router": "^17.1.0",
-        "@dotcms/client": "0.0.1-alpha.17"
+        "@dotcms/client": "0.0.1-alpha.17",
+        "rxjs": "^7.8.0"
     },
     "description": "Official Angular Components library to render a dotCMS page.",
     "repository": {
