--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "@dotcms/client": "0.0.1-alpha.17",
+    "@dotcms/angular": "0.0.1-alpha.17"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
