--- a/core-web/libs/sdk/angular/.eslintrc.json
+++ b/core-web/libs/sdk/angular/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "extends": ["../../../.eslintrc.base.json"],
-    "ignorePatterns": ["!**/*", "node_modules"],
+    "ignorePatterns": ["!**/*"],
     "overrides": [
         {
             "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
