#28719: Adding AI Generative postman tests

--- a/dotcms-integration/pom.xml
+++ b/dotcms-integration/pom.xml
@@ -32,7 +32,7 @@
 
         <docker.base.image>tomcat:9.0.74-jdk11</docker.base.image>
         <docker.output.image.name>dotcms/dotcms-test</docker.output.image.name>
-
+        <docker.image.wiremock>${ext.docker.image.wiremock}</docker.image.wiremock>
 
         <felix.base.dir>${project.build.directory}/core-war/WEB-INF/felix</felix.base.dir>
         <felix.system.base.dir>${project.build.directory}/core-war/WEB-INF/felix-system</felix.system.base.dir>
@@ -510,7 +510,7 @@
                     </plugin>
                 </plugins>
             </build>
- <profiles>
+    <profiles>
         <profile>
             <id>quick-test</id>
             <activation>
