--- a/environments/environment.properties
+++ b/environments/environment.properties
@@ -3,4 +3,5 @@ default.context.name=default
 docker.image.search=opensearchproject/opensearch:1.3.6
 docker.image.postgres=ankane/pgvector
 postman.collections=Maintenance_Resource
-docker.image.wiremock=wiremock/wiremock:3.6.0
+docker.image.wiremock=wiremock/wiremock:3.5.3
+wiremock.api.key=some-api-key-1a2bc3
