--- a/.github/workflows/reusable-deployment.yml
+++ b/.github/workflows/reusable-deployment.yml
@@ -80,7 +80,7 @@ jobs:
           docker_context: dev-env
           commit_id: ${{ github.sha }}
           ref: ${{ inputs.environment }}
-          latest: ${{ inputs.latest }}
+          latest: true #${{ inputs.latest }}
           do_deploy: ${{ vars.DOCKER_DEPLOY || 'true' }} # default to true, set to disable in fork
           docker_io_username: ${{ secrets.DOCKER_USERNAME }}
           docker_io_token: ${{ secrets.DOCKER_TOKEN }}
