Adding new dev Geronimo

--- a/.github/data/slack-mappings.json
+++ b/.github/data/slack-mappings.json
@@ -151,5 +151,9 @@
   {
     "github_user": "KevinDavilaDotCMS",
     "slack_id": "U05R06D9YSX"
+  },
+  {
+    "github_user": "gortiz-dotcms",
+    "slack_id": "U074WTAEJBS"
   }
 ]
