--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1080,7 +1080,7 @@
 
                                         <exclude>io.netty:netty-all</exclude>
 
-                                        <exclude>org.slf4j:jcl-over-slf4j</exclude>
+                                        <!--<exclude>org.slf4j:jcl-over-slf4j</exclude>-->
 
                                         <exclude>org.jboss.slf4j:slf4j-jboss-logging</exclude>
                                         <exclude>org.slf4j:slf4j-simple</exclude>
@@ -1090,10 +1090,11 @@
                                         <exclude>org.slf4j:slf4j-log4j13</exclude>
 
                                         <!-- Ban Logback implementations -->
-                                        <exclude>ch.qos.logback:logback-classic</exclude>
+                                       <!-- <exclude>ch.qos.logback:logback-classic</exclude>
                                         <exclude>ch.qos.logback:logback-core</exclude>
                                         <exclude>ch.qos.logback:logback-access</exclude>
                                         <exclude>ch.qos.logback:logback</exclude>
+                                        -->
                                         <exclude>org.osgi:org.osgi.annotation.versioning</exclude>
 
                                         <!-- Ban checker-qual, we don't use Checker Framework -->
