feat(CICD): including Miller Gonzalez to slack mappings and making workflow continue-on-error enabled in critical steps.

--- a/.github/data/slack-mappings.json
+++ b/.github/data/slack-mappings.json
@@ -155,5 +155,9 @@
   {
     "github_user": "gortiz-dotcms",
     "slack_id": "U074WTAEJBS"
+  },
+  {
+    "github_user": "Millertaker",
+    "slack_id": "U075E9Y204B"
   }
 ]
