disable feature via properties file

--- a/dotCMS/src/main/resources/dotmarketing-config.properties
+++ b/dotCMS/src/main/resources/dotmarketing-config.properties
@@ -870,4 +870,7 @@ FEATURE_FLAG_NEW_EDIT_PAGE=false
 ## Content Editor V2
 CONTENT_EDITOR2_ENABLED=false
 
+## Localizations Enhancements
+LOCALIZATION_ENHANCEMENTS_ENABLED=false
+
 STARTER_BUILD_VERSION=${starter.deploy.version}
